--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: telegram-forward-bot
     env: python
+    pythonVersion: 3.10
     region: frankfurt
     buildCommand: ""
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
